[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "langgraph-opensearch"
version = "0.1.3"
description = "Library with an OpenSearch implementation of LangGraph checkpoint saver."
readme = "README.md"
requires-python = ">=3.12,<4"
license = { text = "MIT" }

authors = [
  { name = "Samriddha Chatterjee", email = "samriddhac.official@gmail.com" }
]

dependencies = [
  "langgraph-checkpoint>=2.0.23,<3.0.0",
  "opensearch-py>=3.0.0,<4.0.0"
]

[project.optional-dependencies]
dev = [
  "anyio>=4.4.0",
  "langchain-core>=0.3.55",
  "langchain-ollama>=0.2.2",
  "langchain-openai>=0.2.14",
  "langgraph>=0.3.23",
  "langgraph-checkpoint>=2.0.9",
  "pytest>=7.2.1",
  "pytest-asyncio>=0.21.1",
  "pytest-mock>=3.11.1",
  "pytest-watch>=4.2.0",
  "pytest-repeat>=0.9.3",
  "syrupy>=4.0.2",
  "pre-commit>=4.0",
  "mypy>=1.10.0",
  "ruff>=0.4.0",
  "boto3>=1.29.6",
  "requests-aws4auth>=1.2.3"
]

[tool.hatch.metadata]
allow-direct-references = true
package-mode = true

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph"]

[tool.hatch.envs.dev]
optional-dependencies = ["dev"]

[tool.ruff]
lint.select = ["E", "F", "UP", "B", "I"]
lint.ignore = ["E501", "B008", "UP007", "UP006"]

[tool.hatch.publish.indexes.testpypi]
url = "https://test.pypi.org/legacy/"
